Changes
=======

1.0.19 (?)
----------

- Add linear_units property to CRS (#1638).
- Ensure that AWS_NO_SIGN_REQUESTS is sufficient for accessing public S3
  datasets and that import of boto3 is not required (#1637).
- An out_dtype parameter has been added to DatasetReaderBase.read, enabling
  on-the-fly casting of raster values to the desired type (#1637). This uses
  the same latent feature used to get support for "int8" data.
- Restore pickle protocol for CRS, using WKT as state (#1625).
- Support for signed 8-bit integer datasets ("int8" dtype) has been added
  (#1595).

1.0.18 (2019-02-07)
-------------------

- Fix a regression reported in #1623.

1.0.17 (2019-02-05)
-------------------

- Fix a regression in evaluation of CRS equality (#1620).

1.0.16 (2019-02-04)
-------------------

- A bug preventing GCPs from being created with new BufferedDatasetWriter
  instances (#1600) has been fixed (#1610).
- A previously unreported bug preventing BufferedDatasetWriters from being
  opened in r+ mode has been fixed.
- A regression in creating CRS objects from PROJ4 strings that include
  "+wktext" (#1609) has been fixed.
- Regressions in str representations of empty CRS objects and the handling of
  unreferenced datasets in rasterio._base have been fixed (#1616).
- GDAL seems to work best if GDAL_DATA is set as early as possible. Ideally it
  is set when building the library or in the environment before importing
  Rasterio, but for wheels we patch GDAL_DATA into os.environ when rasterio.env
  is imported. This resolves #1611.

1.0.15 (2019-01-27)
-------------------

- Google cloud storage support was *not* in fact added in 1.0.14, but is
  present in 1.0.15.

1.0.14 (2019-01-22)
-------------------

- The _CRS class has been refactored so that a WKT representation, rather than
  PROJ4 representation, is the canonical form. This resolves issues #1397 and
  #1587 specifically, and an entire category of issues discussed in